# Google_Calendar_MCP

./: .gitignore  Dockerfile  pyproject.toml  readme.md  requirements.txt
docker_files/: calendar.Dockerfile  gmail.Dockerfile  meet.Dockerfile
google_auth/services/: google_calendar.py  google_mail.py  google_meet.py
mcp_server/: run_calendar_mcp.py  run_gmail_mcp.py  run_meet_mcp.py
